--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<center>
-								<img id = bandlogo src="images/IMG_3698.jpeg">
+								<img id = bandlogo style="size: 20%" src="images/IMG_3698.jpeg">
 									
 								</img>
 							</center>
