--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <meta name="robots" content="noindex,follow,max-image-preview:standard">
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=1120">
-<meta property="og:title" content="User:LethalOperation/sandbox - Wikipedia">
+<meta property="og:title" content="Home - Lethal Operation Official Website">
 <meta property="og:type" content="website">
 <link rel="preconnect" data-savepage-href="//upload.wikimedia.org" href="">
 <link rel="alternate" media="only screen and (max-width: 640px)" data-savepage-href="//en.m.wikipedia.org/wiki/User:LethalOperation/sandbox" href="">
@@ -83,7 +83,7 @@
   function savepage_ShadowLoader(c){createShadowDOMs(0,document.documentElement);function createShadowDOMs(a,b){var i;if(b.localName=="iframe"||b.localName=="frame"){if(a<c){try{if(b.contentDocument.documentElement!=null){createShadowDOMs(a+1,b.contentDocument.documentElement)}}catch(e){}}}else{if(b.children.length>=1&&b.children[0].localName=="template"&&b.children[0].hasAttribute("data-savepage-shadowroot")){b.attachShadow({mode:"open"}).appendChild(b.children[0].content);b.removeChild(b.children[0]);for(i=0;i<b.shadowRoot.children.length;i++)if(b.shadowRoot.children[i]!=null)createShadowDOMs(a,b.shadowRoot.children[i])}for(i=0;i<b.children.length;i++)if(b.children[i]!=null)createShadowDOMs(a,b.children[i])}}}
 </script>
 <meta name="savepage-url" content="https://en.wikipedia.org/wiki/User:LethalOperation/sandbox">
-<meta name="savepage-title" content="User:LethalOperation/sandbox - Wikipedia">
+<meta name="savepage-title" content="Home - Lethal Operation Official Website">
 <meta name="savepage-pubdate" content="Unknown">
 <meta name="savepage-from" content="https://en.wikipedia.org/wiki/User:LethalOperation/sandbox">
 <meta name="savepage-date" content="Tue Mar 11 2025 06:16:15 GMT-0400 (Eastern Daylight Time)">
