--- a/index.html
+++ b/index.html
@@ -912,10 +912,10 @@ html.skin-theme-clientpref-night #cnotice-toggle-box {
 <li>Andrew Brush</li></ul>
 </td></tr>
 <tr><th colspan="2" class="infobox-header" style="color: #202122;background-color: #b0c4de"></th></tr><tr><th scope="row" class="infobox-label">Past members</th><td class="infobox-data"><ul><li>Cooper Fehrle</li>
-<li>Yannick Ramanujam</li>
-<li>Rafael Appiani</li>
-<li>Kyle Meyers</li>
-<li>Andrew Brush</li></ul></td></tr></tbody></table>
+<li>Wesley Graham</li>
+<li>Malek Djerbal</li>
+<li>Jake Nicholson</li>
+<li>Stanley Kaufman</li></ul></td></tr>
 <tr><th colspan="2" class="infobox-header" style="color: #202122;background-color: #b0c4de"></th></tr><tr><th scope="row" class="infobox-label">Website</th><td class="infobox-data">lethaloperation.com</td></tr></tbody></table>
 <div class="mw-heading mw-heading2"><h2 id="History">History</h2><span class="mw-editsection"><span class="mw-editsection-bracket">[</span><a data-savepage-href="/w/index.php?title=User:LethalOperation/sandbox&action=edit&section=2" href="https://en.wikipedia.org/w/index.php?title=User:LethalOperation/sandbox&action=edit&section=2" title="Edit section: History"><span>edit</span></a><span class="mw-editsection-bracket">]</span></span></div>
 <div class="mw-heading mw-heading3"><h3 id="Early_career_(2022)"><span id="Early_career_.282022.29"></span>Early career (2022)</h3><span class="mw-editsection"><span class="mw-editsection-bracket">[</span><a data-savepage-href="/w/index.php?title=User:LethalOperation/sandbox&action=edit&section=3" href="https://en.wikipedia.org/w/index.php?title=User:LethalOperation/sandbox&action=edit&section=3" title="Edit section: Early career (2022)"><span>edit</span></a><span class="mw-editsection-bracket">]</span></span></div>
